RESOLVED FIXED120959
VectorMover should use std::move
https://bugs.webkit.org/show_bug.cgi?id=120959
Summary VectorMover should use std::move
Anders Carlsson
Reported 2013-09-07 11:06:10 PDT
VectorMover should use std::move
Attachments
Patch (2.78 KB, patch)
2013-09-07 11:08 PDT, Anders Carlsson
no flags
Patch (4.14 KB, patch)
2013-09-07 12:23 PDT, Anders Carlsson
no flags
Anders Carlsson
Comment 1 2013-09-07 11:08:01 PDT
Early Warning System Bot
Comment 2 2013-09-07 11:16:50 PDT
Early Warning System Bot
Comment 3 2013-09-07 11:20:17 PDT
Geoffrey Garen
Comment 4 2013-09-07 11:41:13 PDT
/home/webkit/WebKit/Source/JavaScriptCore/bytecode/CallLinkInfo.h:45:8: error: invalid conversion from 'unsigned char:5' to 'JSC::CallLinkInfo::CallType' [-fpermissive] I guess this means that the Qt compiler needs an explicit move constructor for CallLinkInfo, since it isn't willing to implicitly copy a typed bitfield?
Geoffrey Garen
Comment 5 2013-09-07 11:41:29 PDT
Comment on attachment 210913 [details] Patch r=me
Anders Carlsson
Comment 6 2013-09-07 11:54:29 PDT
(In reply to comment #4) > /home/webkit/WebKit/Source/JavaScriptCore/bytecode/CallLinkInfo.h:45:8: error: invalid conversion from 'unsigned char:5' to 'JSC::CallLinkInfo::CallType' [-fpermissive] > > I guess this means that the Qt compiler needs an explicit move constructor for CallLinkInfo, since it isn't willing to implicitly copy a typed bitfield? I think it’s a bug in that particular version of GCC. I am going to change the bitfield type to unsigned instead.
Anders Carlsson
Comment 7 2013-09-07 12:23:39 PDT
Anders Carlsson
Comment 8 2013-09-07 12:45:05 PDT
Note You need to log in before you can comment on or make changes to this bug.